--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="home">Home</string>
     <string name="about">about</string>
     <string name="logout">logout</string>
+    <string name="mit">This is the common text</string>
 </resources>
